--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -1,6 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>qml/main.qml</file>
+        <file>qml/MainMenu.qml</file>
+        <file>fonts/MaterialIcons-Regular.ttf</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
