Fixed BRA-8: added rulebook page with a WebVie

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -2,7 +2,10 @@
     <qresource prefix="/">
         <file>qml/main.qml</file>
         <file>qml/MainMenu.qml</file>
+        <file>qml/Rulebook.qml</file>
         <file>fonts/MaterialIcons-Regular.ttf</file>
+        <file>pages/main.css</file>
+        <file>pages/rulebook.html</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
