Fixed BRA-10: Added search header and search javascript API

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -3,9 +3,13 @@
         <file>qml/main.qml</file>
         <file>qml/MainMenu.qml</file>
         <file>qml/Rulebook.qml</file>
+        <file>qml/RulebookHeader.qml</file>
+        <file>qml/components/WebViewSearch.qml</file>
         <file>fonts/MaterialIcons-Regular.ttf</file>
         <file>pages/main.css</file>
         <file>pages/rulebook.html</file>
+        <file>pages/findAndReplaceDOMText.js</file>
+        <file>pages/searchAPI.js</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
