--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -1,16 +1,73 @@
+/* RESET STYLES
+   ========================================================*/
+
+h1, h2, h3, h4, h5, p, figure {
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5 {
+  font-weight: normal;
+}
+
+
+/* BASE STYLES
+   ========================================================*/
+
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700');
+
+/**
+ * Set up default styles on the root element:
+ * [1] Set main font rules
+ * [2] set box-sizing to border-box
+ */
+html {
+  box-sizing: border-box; /* [2] */
+  font: 16px/1.5 Roboto Condensed; /* [1] */
+}
+
+/**
+ * Make all elements from the DOM inherit from the parent box-sizing
+ * Since `*` has a specificity of 0, it does not override the `html` value
+ * making all elements inheriting from the root box-sizing value
+ * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+ */
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+h2 {
+  color: #9C691E;
+}
+
+img {
+  max-width: 100%;
+}
+
+
+/* LAYOUT
+   ========================================================*/
+
 .container {
-  width: 300px;
+  width: 100%;
 }
 
-.image {
-  background-color: red;
-  border-radius: 50%;
-  float: left;
-  margin: 0 10px 10px 0;
-  height: 75px;
-  width: 75px;
+.rulebook {
+  background: url('images/rulebook/main-background.jpg') no-repeat fixed;
+  background-size: 100% 100%;
+  padding: 1rem;
 }
 
-.shape {
-  shape-outside: margin-box;
+.chapter {
+  padding-top: 4.236rem;
+}
+
+.article {
+  margin-top: 2.618rem;
+}
+
+/**
+ * Set paragraphs flow
+ */
+.article > * + p {
+  margin-top: 1rem;
 }
