--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -13,7 +13,33 @@ h1, h2, h3, h4, h5 {
 /* BASE STYLES
    ========================================================*/
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700');
+/**
+ * Web font: Roboto Condensed - regular, italic, bold, bold italic.
+ */
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: url('fonts/RobotoCondensed-Regular.woff') format('woff'),
+       url('fonts/RobotoCondensed-Italic.woff') format('woff'),
+       url('fonts/RobotoCondensed-Bold.woff') format('woff'),
+       url('fonts/RobotoCondensed-BoldItalic.woff') format('woff');
+}
+
+/**
+ * Web font: Trajan Pro - regular, bold.
+ */
+@font-face {
+  font-family: 'Trajan Pro';
+  src: url('fonts/TrajanPro-Regular.woff') format('woff'),
+       url('fonts/TrajanPro-Bold.woff') format('woff');
+}
+
+/**
+ * Web font: Immortal.
+ */
+@font-face {
+  font-family: 'Immortal';
+  src: url('fonts/Immortal.woff') format('woff');
+}
 
 /**
  * Set up default styles on the root element:
@@ -37,6 +63,8 @@ html {
 
 h2 {
   color: #9C691E;
+  font-family: Trajan Pro;
+  font-weight: bold;
 }
 
 img {
