BRA-24: Build the rulebook's Game End chapter

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -59,6 +59,8 @@
         <file>pages/images/rulebook/game_flow/demon-card.jpg</file>
         <file>pages/images/rulebook/game_flow/feast-card.jpg</file>
         <file>pages/images/rulebook/game_flow/volcanos-example.png</file>
+        <file>pages/images/rulebook/game_end/gameend-heading.png</file>
+        <file>pages/images/rulebook/game_end/game-end.jpg</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
