--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -332,6 +332,7 @@ ul {
   position: absolute;
   right: 0;
   top: 50%;
+  -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
