BRA-29: Build the rulebook's Expansion rules, One-player rules chapter

--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -224,6 +224,12 @@ ul {
   shape-outside: circle();
 }
 
+.text_around_image_left > img.wrapped_card,
+.text_around_image_right > img.wrapped_card {
+  shape-outside: none;
+  width: 50%;
+}
+
 /**
  * Image is positioned to the right
  */
