BRA-27: Build the rulebook's Components chapter

--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -133,6 +133,10 @@ ul {
   margin: auto;
 }
 
+.u-brown_text {
+  color: #9C691E;
+}
+
 
 /* LAYOUT ELEMENTS
    ========================================================*/
