--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -68,6 +68,27 @@
         <file>pages/images/rulebook/variant/green-horse.png</file>
         <file>pages/images/rulebook/variant/red-tiger.png</file>
         <file>pages/images/rulebook/variant/yellow-wolf.png</file>
+        <file>pages/images/rulebook/components/components-heading.png</file>
+        <file>pages/images/rulebook/components/c-banners.png</file>
+        <file>pages/images/rulebook/components/c-buildings-cards.png</file>
+        <file>pages/images/rulebook/components/c-champions.png</file>
+        <file>pages/images/rulebook/components/c-colored-bases.png</file>
+        <file>pages/images/rulebook/components/c-conquer-tiles.png</file>
+        <file>pages/images/rulebook/components/c-demons-cards.png</file>
+        <file>pages/images/rulebook/components/c-domination-point.png</file>
+        <file>pages/images/rulebook/components/c-feast-cards.png</file>
+        <file>pages/images/rulebook/components/c-gameboard.png</file>
+        <file>pages/images/rulebook/components/c-gods-cards.png</file>
+        <file>pages/images/rulebook/components/c-honor-track.png</file>
+        <file>pages/images/rulebook/components/c-knowledge.png</file>
+        <file>pages/images/rulebook/components/c-map.png</file>
+        <file>pages/images/rulebook/components/c-player-gameboard.png</file>
+        <file>pages/images/rulebook/components/c-region-cards.png</file>
+        <file>pages/images/rulebook/components/c-resource-tokens.png</file>
+        <file>pages/images/rulebook/components/c-tokens.png</file>
+        <file>pages/images/rulebook/components/c-troops.png</file>
+        <file>pages/images/rulebook/components/c-volcano.png</file>
+        <file>pages/images/rulebook/components/c-warchiefs-cards.png</file>
         <file>pages/images/rulebook/expansion/expansion-heading.png</file>
         <file>pages/images/rulebook/expansion/hunt-heading.png</file>
         <file>pages/images/rulebook/expansion/expansion-setup-1.jpg</file>
