BRA-30: Build the rulebook's Expansion Components chapter

--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -137,6 +137,10 @@ ul {
   color: #9C691E;
 }
 
+.u-blue_text {
+  color: #5C6060;
+}
+
 
 /* LAYOUT ELEMENTS
    ========================================================*/
