--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -122,6 +122,22 @@
         <file>pages/images/rulebook/expansion/demons-feasts-2.jpg</file>
         <file>pages/images/rulebook/expansion/oneplayer-heading.png</file>
         <file>pages/images/rulebook/expansion/prephase.jpg</file>
+        <file>pages/images/rulebook/expansion_components/expansion-components-heading.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-alternative-volcano.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-add-building-cards.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-add-demons-cards.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-add-feast-cards.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-alternative-map.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-beast-cards.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-fate-cards.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-hunts.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-ks-map.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-magma-tokens.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-milestone-tokens.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-monster-cards.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-oneplayer-rulebook.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-personal-obj.png</file>
+        <file>pages/images/rulebook/expansion_components/ce-skullcrashers.png</file>
         <file>pages/images/rulebook/reference/reference-heading.png</file>
         <file>pages/images/rulebook/reference/arrow.png</file>
         <file>pages/images/rulebook/reference/building-card.png</file>
